--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ Thanks for visiting and keep it real!
                 <div class="juan flex-item-image" data-sr='wait 1s, enter left over 2.5s'><img src="assets/img/JUAN2.gif" class="hero-img"></div>
                 <div class="flex-item-txtblock" data-sr='wait 1s enter right over 2.5s'>
                     <div><img src="assets/img/brandpurple2.png" class="center-block hero-responsive brand-div" alt="whoisjuan"></div>
-                    <p class="headerName"><b>Juan J. Ramirez</b></p>
-                    <p class="headerlead center-block"><span>UX Designer</span><span>&nbsp; • &nbsp;</span><span>Product Hacker</span></p>
+                    <p class="headerName"><b>Muhammed Hassan M</b></p>
+                    <p class="headerlead center-block"><span>Associate Data Scientist</span><span>&nbsp; • &nbsp;</span><span>Proud Coder</span></p>
                     <div class="center-block dividerLine"></div>
-                    <p class="headerlead center-block">I'm a passionate UX Designer, Product Hacker and Human-Computer-Interaction Obsessive who loves to create ingenious software and daring interaction concepts.</p>
+                    <p class="headerlead center-block">I'm a passionate Data Scientist, Proud Coder and Human-Computer-Interaction Obsessive who loves to create ingenious software and daring interaction concepts.</p>
                 </div>
             </div>
 <!--             <div class="row scroller">
